# django4-full-stack

./: README.md  pyproject.toml
