[tool.poetry]
name = "django4-full-stack"
version = "0.1.0"
description = ""
authors = ["Edwin Gonzalez <29959854+gonzales-edwin@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
